--- a/config.json
+++ b/config.json
@@ -1,19 +1,32 @@
  {
+//ENV	 
 	 
   "TOKEN": "your_bot_token" 
-  "default_prefix": "", 
+  "default_prefix": "",
+  "mongo_url": "your mongoDB url connection"
+	 
+//COLORS	 
+	 
   "owners": "owner_id", 
   "main_color" : "#dc5586",//The main embeds color
   "error_color" : "#F04947",//The embeds error color
   "success_color" : "#dc5586",
   "warning_color" : "#F9C541",
   "music_color" : "#5DADEC",
-//EMOJIS	 
+	
+//COLORS 2
+	 
+"colors": {
+    "yes" : "#dc5586",
+    "no"  : "#F04947",
+  }
+
+//EMOJIS
+
   "warning" : "<:warning:862627048123269120> ",
   "success" : "<:Success:869580276102234133> ",
-	 
-	"volumee" : "<:icons8volumebasso64:862767260316729364>",
-	"diskspin" : "<a:diskspin:862684926431199312> ",
+  "volumee" : "<:icons8volumebasso64:862767260316729364>",
+  "diskspin" : "<a:diskspin:862684926431199312> ",
   "error" : "<:Error:869557307506323496> ",
   "butterfly" : "<a:SH_butterflylightpurple:865598138814431253>",
   "staff" : "<:DiscordStaff:869576643423916092>",
@@ -25,12 +38,4 @@
    "devb" : "<:developer_badge2:865602455977852981>",
    "ytlogo" : "<:gc_youtube:868508602904743956>",
 	 
-
-    "colors": {
-    "yes" : "#dc5586",
-    "no"  : "#F04947",
-  }
-
-
-
 }
