--- a/config.json
+++ b/config.json
@@ -19,7 +19,7 @@
 "colors": {
     "yes" : "#dc5586",
     "no"  : "#F04947",
-  }
+  },
 
 //EMOJIS
 
@@ -36,6 +36,6 @@
    "cursor": "<a:cursor:865601830830473256>",
    "vsc" : "<:vsc:865602018524266515>",
    "devb" : "<:developer_badge2:865602455977852981>",
-   "ytlogo" : "<:gc_youtube:868508602904743956>",
+   "ytlogo" : "<:gc_youtube:868508602904743956>"
 	 
 }
