--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
  {
 
 	 
-  "TOKEN": "your_bot_token" 
+  "TOKEN": "your_bot_token",
   "default_prefix": "",
   "mongo_url": "your mongoDB url connection",
   "owners": "owner_id", 
