--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "//3": "updating this file will download and update your packages",
   "name": "hello-express",
   "version": "3.0.2",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -111,7 +111,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/Kayeda117/Akimi"
   },
   "license": "MIT",
   "keywords": [
