--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://github.com/Kayeda117/Akimi"
+    "url": "https://github.com/kayedaa/Akimi"
   },
   "license": "MIT",
   "keywords": [
